turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:29: error: not enough arguments for method faireMaison: (dim: Double)Unit.
Unspecified value parameter dim.
  faireMaison()
             ^